--- a/assets/css/spectrum.css
+++ b/assets/css/spectrum.css
@@ -7,6 +7,7 @@ body {
   height: 100%;
   color: #3e444d;
   background-color: #f4f5f7;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
 }
 html {
   height: 100% !important;
@@ -2987,4 +2988,54 @@ a:hover + .sub-nav{
 
 .footer-nav li:hover{
   font-weight: bold;
+}
+
+#keyframes button_move{
+    from{
+        margin-bottom:0px;
+    }
+
+    to {
+        margin-bottom: 30px;
+    }
+}
+
+.schedule-button{
+    background-color: #6bb5d2;
+    color: white;
+    height: 50px;
+    width: 230px;
+    font-size: 18px;
+    border: #6bb5d2;
+}
+
+.animate: hover {
+animation: button_move 5s infinite;
+}
+
+.incy-services-slider {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 80px;
+}
+
+.incy-services-slider img{
+    width: 20%;
+}
+
+.incy-services-card {
+    padding:20px;
+    background-color: rgba(255,255,255,0.8);
+    border: 1px solid white;
+    height: 150px;
+}
+
+.incy-services-card:hover {
+    cursor:pointer;
+    border: 1px solid #1cc3e9;
+}
+
+.incy-services-card h4{
+    color: black;
 }
